--- a/NLP_Review.ipynb
+++ b/NLP_Review.ipynb
@@ -6,7 +6,7 @@
       "name": "NLP Review.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNx95Yhy3VQY+479sN34RNu",
+      "authorship_tag": "ABX9TyOMwJEySwvhq7KB0y6Yit6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "id": "zJ9G47GYlbY2"
       },
@@ -47,8 +47,18 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import re"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Input"
+      ],
+      "metadata": {
+        "id": "D2jw-nUCrCJU"
+      }
     },
     {
       "cell_type": "code",
@@ -58,7 +68,7 @@
       "metadata": {
         "id": "X9eqi-41l7g1"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -72,9 +82,9 @@
           "height": 206
         },
         "id": "e8JqHehFmMei",
-        "outputId": "a85a2896-09b7-4a60-a1c6-ef0a6265c64f"
+        "outputId": "80e838b0-63a6-4fbf-b61f-e3777b273e41"
       },
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -89,7 +99,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fbc6847f-d646-4f6a-8e00-c845b808b971\">\n",
+              "  <div id=\"df-548f335c-f622-4fb5-8ea4-0257a7add8c2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -142,7 +152,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fbc6847f-d646-4f6a-8e00-c845b808b971')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-548f335c-f622-4fb5-8ea4-0257a7add8c2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -193,12 +203,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fbc6847f-d646-4f6a-8e00-c845b808b971 button.colab-df-convert');\n",
+              "          document.querySelector('#df-548f335c-f622-4fb5-8ea4-0257a7add8c2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fbc6847f-d646-4f6a-8e00-c845b808b971');\n",
+              "          const element = document.querySelector('#df-548f335c-f622-4fb5-8ea4-0257a7add8c2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -221,7 +231,87 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Cleaning"
+      ],
+      "metadata": {
+        "id": "suVe6ORFrEO7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset['Review'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "cXthxJKXqsH5",
+        "outputId": "ba1fb402-830e-4c47-f871-dee6311c266b"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Wow... Loved this place.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "review = re.sub('[^a-zA-Z]', \" \", dataset['Review'][0])"
+      ],
+      "metadata": {
+        "id": "9dKn3s2Omcl6"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "review"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "2mBExnM6qq2d",
+        "outputId": "ae68405e-e19a-4e1f-e137-23ddaedbd9f7"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Wow    Loved this place '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -231,7 +321,7 @@
         ""
       ],
       "metadata": {
-        "id": "9dKn3s2Omcl6"
+        "id": "QDfnZmWnqynT"
       },
       "execution_count": null,
       "outputs": []
